[package]
name = "border_cross_test"
version = "0.1.0"
authors = ["Augusto <aug.ornelas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
border_cross = { path = "../../../../rust-piscine-solutions/border_cross"}
