[package]
name = "commits_stats_test"
version = "0.1.0"
authors = ["Augusto <aug.ornelas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
# chrono = { version = "0.4", features = ["serde", "rustc-serialize"]}
commits_stats = { path = "../../../../rust-piscine-solutions/commits_stats"}