[package]
name = "delete_prefix_test"
version = "0.1.0"
authors = ["Augusto <aug.ornelas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delete_prefix = { path = "../../../../rust-piscine-solutions/delete_prefix"}