[package]
name = "diamond_creation_test"
version = "0.1.0"
authors = ["MSilva95 <miguel-silva98@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diamond_creation = { path = "../../../../rust-piscine-solutions/diamond_creation"} 
