[package]
name = "drop_the_thread_test"
version = "0.1.0"
authors = ["lee <lee-dasilva@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_the_thread = { path = "../../../../rust-piscine-solutions/drop_the_thread"}
