[package]
name = "how_many_references_test"
version = "0.1.0"
authors = ["lee <lee-dasilva@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
how_many_references = { path = "../../../../rust-piscine-solutions/how_many_references"}
