[package]
name = "logic_number_test"
version = "0.1.0"
authors = ["MSilva95 <miguel-silva98@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logic_number = { path = "../../../../rust-piscine-solutions/logic_number"} 
