[package]
name = "middle_day_test"
version = "0.1.0"
authors = ["OGordoo <marcosafonso8@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
middle_day = { path = "../../../../rust-piscine-solutions/middle_day"}

