[package]
name = "profanity_filter_test"
version = "0.1.0"
authors = ["lee <lee-dasilva@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
profanity_filter = { path = "../../../../rust-piscine-solutions/profanity_filter"}
chrono = "0.4.19"
