[package]
name = "question_mark_test"
version = "0.1.0"
authors = ["lee <lee-dasilva@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
question_mark = { path = "../../../../rust-piscine-solutions/question_mark"}
