[package]
name = "rgb_match_test"
version = "0.1.0"
authors = ["MSilva95 <miguel-silva98@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb_match = { path = "../../../../rust-piscine-solutions/rgb_match"} 
