[package]
name = "roman_numbers_test"
version = "0.1.0"
authors = ["Augusto <aug.ornelas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roman_numbers = { path = "../../../../rust-piscine-solutions/roman_numbers"}
