[package]
name = "slices_to_map_test"
version = "0.1.0"
authors = ["Augusto <aug.ornelas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slices_to_map = { path = "../../../../rust-piscine-solutions/slices_to_map"}