[package]
name = "step_iterator_test"
version = "0.1.0"
authors = ["Augusto <aug.ornelas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
step_iterator = { path = "../../../../rust-piscine-solutions/step_iterator"}